<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Leg Controller</string>
    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>


    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>

    <!-- 버튼 이 -->
    <string name="button_stop">정지 모드</string>
    <string name="button_move_help">보행 보조 모드</string>
    <string name="button_move_simple">단순 동작 모드</string>
    <string name="button_connect">connect</string>
    <string name="button_disconnect">disconnect</string>


    <!-- 텍스트 이 -->
    <string name="text_mode_stop">모드 : 정지 모드</string>
    <string name="text_mode_move_help">모드 : 보행 보조 모드</string>
    <string name="text_mode_move_simple">모드 : 단순 동작 모드</string>
    <string name="text_mode_default">모드</string>
    <string name="text_battery_good">배터리 상태 : 양호</string>
    <string name="text_battery_bad">배터리 상태 : 나쁨</string>
    <string name="text_battery_default">배터리 상태</string>

</resources>
